--- a/views/include/_show.ejs
+++ b/views/include/_show.ejs
@@ -8,7 +8,7 @@
     <td class="action-btns">
         <!-- <a href="/update-foodItem?id=<%= foodItems[i]._id%>" class="btn border-shadow update"> -->
             
-            <a href="/foodItems?id=<%= foodItems[i]._id%>" class="btn border-shadow update"></a>
+            <a href="/update-foodItem?id=<%= foodItems[i]._id%>" class="btn border-shadow update"></a>
             <span class="text-gradient"><i class="fas fa-pencil-alt"></i></span>
         </a>
         <a class="btn border-shadow delete" data-id=<%= foodItems[i]._id%> >
