item update issue

--- a/views/include/_show.ejs
+++ b/views/include/_show.ejs
@@ -6,9 +6,9 @@
     <td><%= foodItems[i].category %></td>
     <td><%= foodItems[i].todayspecial %></td>
     <td class="action-btns">
-        <!-- <a href="/update-foodItem?id=<%= foodItems[i]._id%>" class="btn border-shadow update"> -->
-            
-            <a href="/update-foodItem?id=<%= foodItems[i]._id%>" class="btn border-shadow update"></a>
+       
+            <a href="/update-foodItem?id=<%= foodItems[i]._id%>" class="btn border-shadow update">
+
             <span class="text-gradient"><i class="fas fa-pencil-alt"></i></span>
         </a>
         <a class="btn border-shadow delete" data-id=<%= foodItems[i]._id%> >
