--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,13 +131,13 @@ table {
         display: flex;
     }
 
-    table,
+    /* table,
     thead,
     tbody,
     th,
     td {
         display: block;
-    }
+    } */
 
     /* thead tr {
         position: absolute;
