pencil and remove symbols change

--- a/views/include/_show.ejs
+++ b/views/include/_show.ejs
@@ -9,10 +9,10 @@
        
             <a href="/update-foodItem?id=<%= foodItems[i]._id%>" class="btn border-shadow update">
 
-            <span class="text-gradient"><i class="fas fa-pencil-alt"></i></span>
+            <span class="text-gradient">edit</span>
         </a>
         <a class="btn border-shadow delete" data-id=<%= foodItems[i]._id%> >
-            <span class="text-gradient"><i class="fas fa-times"></i></span>
+            <span class="text-gradient"> X </span>
         </a>
     </td>
 </tr>
