--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
             <!-- form handling -->
             <form action="/" method="POST">
                 <table class="table">
-                    <thead class="thead-dark">
+                    <thead class="thead-dark-nav">
                         <tr>
                             <th>ID</th>
                             <th>Item</th>
