--- a/views/add_foodItem.ejs
+++ b/views/add_foodItem.ejs
@@ -12,7 +12,7 @@
            </div>
         </div>
         <div class="form-title text-center">
-            <h2 class="text-dark">New Food Item <i class="fas fa-angle-double-right"></i></h2>
+            <h2 class="text-dark">New Food Item </h2>
             
         </div>
 
