--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -3,15 +3,15 @@
     <div class="new_foodItem">
         
                 <div class="form-group">
-                    <label for="item" class="text-light">Item name</label>
+                    <label for="item" class="text-light"><b>Item name</b></label>
                     <input type="text" name="item" placeholder="Bonda">
                 </div>
                 <div class="form-group">
-                    <label for="price" class="text-light">Price</label>
+                    <label for="price" class="text-light"><b>Price</b></label>
                     <input type="text" name="price" placeholder="20">
                 </div>
                 <div class="form-group">
-                    <label for="category" class="text-light">Category name</label>
+                    <label for="category" class="text-light"><b>Category name</b></label>
                     <div class="radio inline">
                         <input type="radio" id="radio-1" name="category" value="snacks" checked>
                         <label for="radio-1" class="text-light">Snacks</label>
@@ -27,7 +27,7 @@
                 </div>
         
                 <div class="form-group">
-                    <label for="todayspecial" class="text-light">Today’s Special</label>
+                    <label for="todayspecial" class="text-light"><b>Today’s Special</b></label>
                     <div class="radio inline">
                         <input type="radio" id="radio-4" name="todayspecial" value="yes" checked>
                         <label for="radio-4" class="text-light">Yes</label>
@@ -39,7 +39,7 @@
                 </div>
         
                 <div class="form-group">
-                    <button type="submit" class="submit-btn">Save</button>
+                    <button type="submit" class="submit-btn"><b>Save</b></button>
                 </div>
             
         
