--- a/views/update_foodItem.ejs
+++ b/views/update_foodItem.ejs
@@ -21,16 +21,16 @@
          <form method="POST" id="update_foodItem">
             <div class="new_foodItem">
                 <div class="form-group">
-                    <label for="item" class="text-light">Item</label>
+                    <label for="item" class="text-light"><b>Item</b></label>
                     <input type="hidden" name="id" value="<%= foodItem._id %>">
                     <input type="text" name="item" value="<%= foodItem.item %>" placeholder="Bonda">
                 </div>
                 <div class="form-group">
-                    <label for="price" class="text-light">Price</label>
+                    <label for="price" class="text-light"><b>Price</b></label>
                     <input type="text" name="price" value="<%= foodItem.price %>" placeholder="20">
                 </div>
                 <div class="form-group">
-                    <label for="category" class="text-light">Category</label>
+                    <label for="category" class="text-light"><b>Category</b></label>
                     <div class="radio inline">
                         <input type="radio" id="radio-2" name="category" value="snacks" <%= foodItem.category === 'snacks' ? 'checked' : '' %>>
                         <label for="radio-2" class="text-light">Snacks</label>
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="todayspecial" class="text-light">Today’s Special</label>
+                    <label for="todayspecial" class="text-light"><b>Today’s Special</b></label>
                     <div class="radio inline">
                         <input type="radio" id="radio-5" name="todayspecial" value="yes" <%= foodItem.todayspecial === 'yes' ? 'checked' : '' %>>
                         <label for="radio-5" class="text-light">Yes</label>
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="form-group">
-                    <button type="submit" class="submit-btn">Save</button>
+                    <button type="submit" class="submit-btn"><b>Save</b></button>
                 </div>
             </div>
         </form>
