menu list update

--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -13,16 +13,24 @@
                 <div class="form-group">
                     <label for="category" class="text-light"><b>Category name</b></label>
                     <div class="radio inline">
-                        <input type="radio" id="radio-1" name="category" value="snacks" checked>
-                        <label for="radio-1" class="text-light">Snacks</label>
+                        <input type="radio" id="radio-1" name="category" value="Staters/Maggi" checked>
+                        <label for="radio-1" class="text-light">Staters/ Maggi</label>
                     </div>
                     <div class="radio inline">
-                        <input type="radio" id="radio-2" name="category" value="tiffins">
-                        <label for="radio-2" class="text-light">Tiffins</label>
+                        <input type="radio" id="radio-2" name="category" value="Breakfast">
+                        <label for="radio-2" class="text-light">Breakfast</label>
                     </div>
                     <div class="radio inline">
-                        <input type="radio" id="radio-3" name="category" value="biryani">
-                        <label for="radio-3" class="text-light">Biryani</label>
+                        <input type="radio" id="radio-3" name="category" value="Drinks/Chai">
+                        <label for="radio-3" class="text-light">Drinks/ Chai</label>
+                    </div>
+                    <div class="radio inline">
+                        <input type="radio" id="radio-3" name="category" value="Indo-Chinese">
+                        <label for="radio-6" class="text-light">Indo-Chinese</label>
+                    </div>
+                    <div class="radio inline">
+                        <input type="radio" id="radio-3" name="category" value="Snacks">
+                        <label for="radio-6" class="text-light">Snacks</label>
                     </div>
                 </div>
         
