--- a/views/update_foodItem.ejs
+++ b/views/update_foodItem.ejs
@@ -32,16 +32,24 @@
                 <div class="form-group">
                     <label for="category" class="text-light"><b>Category</b></label>
                     <div class="radio inline">
-                        <input type="radio" id="radio-2" name="category" value="snacks" <%= foodItem.category === 'snacks' ? 'checked' : '' %>>
-                        <label for="radio-2" class="text-light">Snacks</label>
+                        <input type="radio" id="radio-2" name="category" value="Staters/Maggi" <%= foodItem.category === 'Staters/Maggi' ? 'checked' : '' %>>
+                        <label for="radio-2" class="text-light">Staters/Maggi</label>
                     </div>
                     <div class="radio inline">
-                        <input type="radio" id="radio-3" name="category" value="tiffins" <%= foodItem.category === 'tiffins' ? 'checked' : '' %>>
-                        <label for="radio-3" class="text-light">Tiffins</label>
+                        <input type="radio" id="radio-3" name="category" value="Breakfast" <%= foodItem.category === 'Breakfast' ? 'checked' : '' %>>
+                        <label for="radio-3" class="text-light">Breakfast</label>
                     </div>
                     <div class="radio inline">
-                        <input type="radio" id="radio-4" name="category" value="biryani" <%= foodItem.category === 'biryani' ? 'checked' : '' %>>
-                        <label for="radio-4" class="text-light">Biryani</label>
+                        <input type="radio" id="radio-4" name="category" value="Drinks/Chai" <%= foodItem.category === 'Drinks/Chai' ? 'checked' : '' %>>
+                        <label for="radio-4" class="text-light">Drinks/Chai</label>
+                    </div>
+                    <div class="radio inline">
+                        <input type="radio" id="radio-7" name="category" value="Indo-Chinese" <%= foodItem.category === 'Indo-Chinese' ? 'checked' : '' %>>
+                        <label for="radio-7" class="text-light">Indo-Chinese</label>
+                    </div>
+                    <div class="radio inline">
+                        <input type="radio" id="radio-8" name="category" value="Snacks" <%= foodItem.category === 'Snacks' ? 'checked' : '' %>>
+                        <label for="radio-8" class="text-light">Snacks</label>
                     </div>
                 </div>
 
