chats category update

--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -25,12 +25,16 @@
                         <label for="radio-3" class="text-light">Drinks/ Chai</label>
                     </div>
                     <div class="radio inline">
-                        <input type="radio" id="radio-3" name="category" value="Indo-Chinese">
+                        <input type="radio" id="radio-6" name="category" value="Indo-Chinese">
                         <label for="radio-6" class="text-light">Indo-Chinese</label>
                     </div>
                     <div class="radio inline">
-                        <input type="radio" id="radio-3" name="category" value="Snacks">
-                        <label for="radio-6" class="text-light">Snacks</label>
+                        <input type="radio" id="radio-7" name="category" value="Snacks">
+                        <label for="radio-7" class="text-light">Snacks</label>
+                    </div>
+                    <div class="radio inline">
+                        <input type="radio" id="radio-8" name="category" value="Chats">
+                        <label for="radio-8" class="text-light">Chats</label>
                     </div>
                 </div>
         
