--- a/views/update_foodItem.ejs
+++ b/views/update_foodItem.ejs
@@ -51,6 +51,10 @@
                         <input type="radio" id="radio-8" name="category" value="Snacks" <%= foodItem.category === 'Snacks' ? 'checked' : '' %>>
                         <label for="radio-8" class="text-light">Snacks</label>
                     </div>
+                    <div class="radio inline">
+                        <input type="radio" id="radio-9" name="category" value="Chats" <%= foodItem.category === 'Chats' ? 'checked' : '' %>>
+                        <label for="radio-9" class="text-light">Chats</label>
+                    </div>
                 </div>
 
                 <div class="form-group">
