--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -3,7 +3,7 @@
     <div class="new_foodItem">
         
                 <div class="form-group">
-                    <label for="item" class="text-light"><b>Item name</b></label>
+                    <label for="item" class="text-light"><b>Enter the Item name</b></label>
                     <input type="text" name="item" placeholder="Bonda">
                 </div>
                 <div class="form-group">
@@ -11,7 +11,7 @@
                     <input type="text" name="price" placeholder="20">
                 </div>
                 <div class="form-group">
-                    <label for="category" class="text-light"><b>Category name</b></label>
+                    <label for="category" class="text-light"><b>Select Item Category name</b></label>
                     <div class="radio inline">
                         <input type="radio" id="radio-1" name="category" value="Staters/Maggi" checked>
                         <label for="radio-1" class="text-light">Staters/ Maggi</label>
@@ -39,7 +39,7 @@
                 </div>
         
                 <div class="form-group">
-                    <label for="todayspecial" class="text-light"><b>Today’s Special</b></label>
+                    <label for="todayspecial" class="text-light"><b>Is this Item is Today’s Special</b></label>
                     <div class="radio inline">
                         <input type="radio" id="radio-4" name="todayspecial" value="yes" checked>
                         <label for="radio-4" class="text-light">Yes</label>
@@ -47,6 +47,18 @@
                     <div class="radio inline">
                         <input type="radio" id="radio-5" name="todayspecial" value="no">
                         <label for="radio-5" class="text-light">No</label>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="isAvailable" class="text-light"><b>Is this Item Available Today</b></label>
+                    <div class="radio inline">
+                        <input type="radio" id="radio-10" name="isAvailable" value="yes" checked>
+                        <label for="radio-10" class="text-light">Yes</label>
+                    </div>
+                    <div class="radio inline">
+                        <input type="radio" id="radio-11" name="isAvailable" value="no">
+                        <label for="radio-11" class="text-light">No</label>
                     </div>
                 </div>
         
