--- a/views/include/_show.ejs
+++ b/views/include/_show.ejs
@@ -11,9 +11,9 @@
 
             <span class="text-gradient">edit</span>
         </a>
-        <a class="btn border-shadow delete" data-id=<%= foodItems[i]._id%> >
+        <!-- <a class="btn border-shadow delete" data-id=<%= foodItems[i]._id%> >
             <span class="text-gradient"> X </span>
-        </a>
+        </a> -->
     </td>
 </tr>
 <% } %>
