--- a/views/update_foodItem.ejs
+++ b/views/update_foodItem.ejs
@@ -68,7 +68,17 @@
                         <label for="radio-6" class="text-light">No</label>
                     </div>
                 </div>
-
+                <div class="form-group">
+                    <label for="isAvailable" class="text-light"><b>Is this Item Available Today</b></label>
+                    <div class="radio inline">
+                        <input type="radio" id="radio-10" name="isAvailable" value="yes" checked>
+                        <label for="radio-10" class="text-light">Yes</label>
+                    </div>
+                    <div class="radio inline">
+                        <input type="radio" id="radio-11" name="isAvailable" value="no">
+                        <label for="radio-11" class="text-light">No</label>
+                    </div>
+                </div>
                 <div class="form-group">
                     <button type="submit" class="submit-btn"><b>Save</b></button>
                 </div>
