<th>Today's Special</th>

--- a/views/include/_show.ejs
+++ b/views/include/_show.ejs
@@ -5,6 +5,7 @@
     <td><%= foodItems[i].price %></td>
     <td><%= foodItems[i].category %></td>
     <td><%= foodItems[i].todayspecial %></td>
+    <td><%= foodItems[i].isAvailable %></td>
     <td class="action-btns">
        
             <a href="/update-foodItem?id=<%= foodItems[i]._id%>" class="btn border-shadow update">
