--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,7 @@
                             <th>Price</th>
                             <th>Category</th>
                             <th>Today's Special</th>
+                            <th>Item Available</th>
                             <th>Action</th>
 
                         </tr>
